--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -6,18 +6,18 @@
  */
 
 body {
-  background: #000;
-  background-color: #000;
+  background: #fff;
+  background-color: #fff;
 }
 
 html:-webkit-full-screen-ancestor {
-  background: #000;
-  background-color: #000;
+  background: #fff;
+  background-color: #fff;
 }
 
 html:-moz-full-screen-ancestor {
-  background: #000;
-  background-color: #000;
+  background: #fff;
+  background-color: #fff;
 }
 
 .reveal pre {
@@ -33,7 +33,7 @@ html:-moz-full-screen-ancestor {
 }
 
 .reveal .slides section .code-presenting-annotation {
-  color: white;
+  color: black;
   background: #1f1c18;
   padding: 1px 15px;
   border-radius: 15px;
@@ -42,7 +42,7 @@ html:-moz-full-screen-ancestor {
 }
 
 .reveal p span.slide-title {
-  color: white;
+  color: black;
   padding: 4px 15px;
   opacity: 0.75 !important;
   border-radius: 15px;
